--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
    <head>
       <meta charset = "UTF-8">
+      <link rel="stylesheet" type="text/css" href="css/styles.css">
+      <script type="text/javascript"></script>
       <title>React App</title>
    </head>
 
