--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 
    <body>
       <div id = "app"></div>
+
+      <div class="container">
+      <div id="login">
+        <h1>Inicia Sesión con tu Cuenta de Spotify</h1>
+        <button id="login-button" class="btn btn-primary">Login</button>
+      </div>
+      <div id="loggedin">
+        <div id="user-profile">
+        </div>
+        <div id="oauth">
+        </div>
+      </div>
+    </div>
       <script src = "index.js"></script>
    </body>
 
