--- a/index.html
+++ b/index.html
@@ -4,25 +4,14 @@
    <head>
       <meta charset = "UTF-8">
       <link rel="stylesheet" type="text/css" href="css/styles.css">
+            <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+
       <script type="text/javascript"></script>
       <title>React App</title>
    </head>
 
    <body>
       <div id = "app"></div>
-
-      <div class="container">
-      <div id="login">
-        <h1>Inicia Sesión con tu Cuenta de Spotify</h1>
-        <button id="login-button" class="btn btn-primary">Login</button>
-      </div>
-      <div id="loggedin">
-        <div id="user-profile">
-        </div>
-        <div id="oauth">
-        </div>
-      </div>
-    </div>
       <script src = "index.js"></script>
    </body>
 
